--- a/AntonWang/WebApi/WebDemo/Html/OdataActionFunction.html
+++ b/AntonWang/WebApi/WebDemo/Html/OdataActionFunction.html
@@ -4,7 +4,18 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
 </head>
-<body>
+    <body>
+        <form action="http://localhost:5071/api/AntiCSRF/ValidateRequestHeader" method="POST">
+        
+        </form>
 
-</body>
+    </body>
+  
+<script src="../Javascript/jquery-1.10.2.min.js"></script>
+@section scripts {
+    <script>
+
+      
+    </script>
+}
 </html>
